[gd_scene load_steps=4 format=3 uid="uid://bar1f35osgbqo"]

[ext_resource type="Script" uid="uid://db8xko071otxa" path="res://cenas/gun.gd" id="1_3j4wp"]
[ext_resource type="Texture2D" uid="uid://dtt0tpyqm62dw" path="res://Assets Super Mario Bros/Sprites/bullet_soldier-removebg-preview.png" id="2_e60c5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfefq"]
size = Vector2(6.5, 3)

[node name="Gun" type="Area2D"]
collision_mask = 6
script = ExtResource("1_3j4wp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yfefq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.0866667, 0.0625)
texture = ExtResource("2_e60c5")

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
target_position = Vector2(-3.3, 0)
collision_mask = 18

[node name="RayCast2DRight" type="RayCast2D" parent="."]
target_position = Vector2(3.3, 0)
collision_mask = 18

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
